--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 				</ul>
 			</div>
 		</div>
-	</section> contact
+	</section>
 	<section class="parts contact">
 		<div class="content">
 			<div class="contactMain">
