--- a/index.html
+++ b/index.html
@@ -221,31 +221,21 @@
 			</div>
 			<div class="aboutItem">
 				<div class="item">
-					<div class="about_time">2017/02-2017/06</div>
+					<div class="about_time">2015/09-2017/07</div>
 					<div class="about_descripte">
-						<div class="about_descripte_title">山西煜哲科技有限公司</div>
+						<div class="about_descripte_title">武汉玖信普惠金融信息服务有限公司(玖融网)</div>
 						<p class="about_descripte_text">
-							&emsp;&emsp;任职web前端工程师。2017年初，在好友的邀请下，加入了初创的公司。我们致力于为广大企业提供一个更智能、更便捷的互联网服务平台！这期间也为更多的本地企业提供了互联网技术服务。在团队中我们一起学习新的前端技术，共同爬坑，共同研发，一起度过了一段丰富充实的日子！
+							&emsp;&emsp;任职web前端工程师。投身互联网金融行业，伴随着移动互联网的迅速发展和民间借贷的兴起，P2P网络信贷平台应运而生，玖融网是一家为借款人与投资人双方提供借贷信息交互、撮合双方完成资金匹配的信息中介服务平台，我们致力于为广大企业提供一个更智能、更便捷的互联网服务平台！在团队中我们一起学习新的前端技术，共同爬坑，共同研发，一起度过了一段丰富充实的日子！
 						</p>
 					</div>
 				</div>
 			</div>
+			
 			<div class="aboutItem">
 				<div class="item">
-					<div class="about_time">2015/11-2016/12</div>
+					<div class="about_time">2013/09-2015/05</div>
 					<div class="about_descripte">
-						<div class="about_descripte_title">去哪儿网（qunar)武汉机票事业中心</div>
-						<p class="about_descripte_text">
-							&emsp;&emsp;任职运营中心产品。2016年初，我决定离开梦想开始的地方，进入一家更为专业的互联网技术公司。从那一刻，我又接触到了与技术息息相关的产品，这一转变让自己在丰富自己知识储备的情况下，更加深入了解了各个职能部门的沟通协调联系。使得自己在整个环节都有很大进步！
-						</p>
-					</div>
-				</div>
-			</div>
-			<div class="aboutItem">
-				<div class="item">
-					<div class="about_time">2013/10-2015/11</div>
-					<div class="about_descripte">
-						<div class="about_descripte_title">东莞朝阳信息网络有限公司</div>
+						<div class="about_descripte_title">武汉京伦科技开发有限公司</div>
 						<p class="about_descripte_text">
 							&emsp;&emsp;任职web前端工程师。很幸运在表哥的带领下，我投身到了前端，成为一名前端工程师。看着一个又一个页面在编码组合DIV+CSS的搭配下，成为一个或静或动的网页，继而变成一个可以被访问被点击的网站，莫名觉得自己可以通过小小的代码创造出丰富多彩的网络世界而感到小小的骄傲。前端的发展也使我的职责开始从页面制作迈向更广阔的天地：Ajax实现页面局部刷新、Bootstrap进行敏捷开发、Angular、react、vue框架做SPA管理系统······前端世界在我面前变的越来越大，也越来越广阔。
 						</p>
